Proto-03/kube/mango.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mango-svc
  labels:
    app: mango
spec:
  ports:
    - name: http
      port: 8000  
      targetPort: 5678  
  selector:
    app: mango
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mango
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mango
  template:
    metadata:
      labels:
        app: mango
    spec:
      serviceAccountName: mango-acct
      containers:
      - name: main
        image: hashicorp/http-echo
        imagePullPolicy: IfNotPresent
        args:
          - "-text=juicy mango"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5678
