Proto-03/kube/mango-gateway-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mango-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
            
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mango-route
spec:
  parentRefs:
  - name: mango-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /mango
    backendRefs:
    - name: mango-svc
      port: 5678
