Proto-03/kube/mango-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mango-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    hostname: mango.example.com
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: mango-credential
    allowedRoutes:
      namespaces:
        from: All
  - name: http
    hostname: mango.example.com
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
            
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mango-route
spec:
  parentRefs:
  - name: mango-gateway
  hostnames: 
  - mango.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mango
    backendRefs:
    - name: mango-svc
      port: 8000
